--- a/search.html
+++ b/search.html
@@ -19,8 +19,9 @@
     .searchBar {
         height: 40px;
         width: 100%;
-        margin-bottom: 20px;
+        margin-bottom: 20px ;
         padding-left: 30px;
+        border: 1px solid blue;
     }
 
     ul {
@@ -31,10 +32,14 @@
 
     li {
         background-color: #C9E64C;
-        border: 1px solid black;
+        border: 1px solid blue;
         height: 40px;
         padding: 10px;
         padding-top: 10px;
+    }
+
+    li:hover {
+        background-color: #A5D63C;
     }
 
     a {
